--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-sm-6 img-col">
           <img src="./assets/photo1.jpg" alt="photo1" class="img-pane">
         </div>
-        <div class=" col-sm-6 txt-col">
+        <div class=" col-sm-6 txt-col" id="txtCol">
           <h1 class="txt-col-h1">Lorem ipsum<br> dolor</h1>
           <p class="txt-col-p">
             Lorem ipsum dolor sit amet, 
