Desktop View Added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="row banner">
         <div id="banner-text">
           <ul class="">
-            <li>GOGGLES GLASSES</li>
+            <li>GOOGLES GLASSES</li>
             <li>Lorem ipsum dolor sit ametLorem ipsum dolor sit amet</li>
           </ul>
         </div>        
