fixed main view in large devices

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
     
     <main>
       <section>
-        <div class="row cont-row">
+        <div class="row justify-content-center cont-row">
           <div class="col-sm-6 col-xl-4 img-col">
             <img src="./assets/photo1.jpg" alt="photo1" class="img-pane">
           </div>
-          <div class=" col-sm-6 col-xl-8 txt-col-1">
+          <div class=" col-sm-6 col-xl-6 txt-col-1">
             <h1 class="txt-col-h1">Lorem ipsum<br> dolor</h1>
             <p class="txt-col-p">
               Lorem ipsum dolor sit amet, 
@@ -88,11 +88,11 @@
             </p>
           </div>
         </div>    
-        <div class="row justify-content-between cont-row">
+        <div class="row justify-content-center cont-row">
         <div class="col-sm-6 col-xl-4 order-sm-12 img-col">
           <img src="./assets/photo2.jpg" alt="photo2" class="img-pane">
         </div>
-        <div class="col-sm-6 col-xl-8 order-sm-2 txt-col-2">
+        <div class="col-sm-6 col-xl-6 order-sm-2 txt-col-2">
           <h1 class="txt-col-h1">Lorem ipsum<br> dolor</h1>
           <p class="txt-col-p">
             Lorem ipsum dolor sit amet, 
